// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accruals getAccrualsData should find an agreement and target but no accrual but still renders the found data and zero worked 1`] = `
"<div>
  <h1 id=\\"accruals-balance-title\\" class=\\"govuk-caption-m\\">My accruals balance as of</h1>
  <h2 id=\\"accruals-date\\" class=\\"govuk-heading-m\\">7 April 2023</h2>
  <div class=\\"govuk-button-group button-group-row\\"><a class=\\"govuk-link govuk-link--no-visited-state\\" id=\\"navigation-previous-link\\" href=\\"/accruals/2023-04-06\\">Previous day</a><a class=\\"govuk-link govuk-link--no-visited-state\\" id=\\"navigation-next-link\\" href=\\"/accruals/2023-04-08\\">Next day</a></div>
  <div class=\\"accruals-data\\">
    <div class=\\"accruals-container\\">
      <form class=\\"grey-border\\">
        <h1 class=\\"govuk-heading-m newline\\">No accruals found for this day</h1>
        <table class=\\"govuk-table\\">
          <tbody class=\\"govuk-table__body\\">
            <tr class=\\"govuk-table__row\\">
              <th id=\\"noData-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
              <td id=\\"noData-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2192:00</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th id=\\"noData-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
              <td id=\\"noData-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">00:00</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th id=\\"noData-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
              <td id=\\"noData-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2192:00</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th id=\\"noData-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
              <td id=\\"noData-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2192:00</td>
            </tr>
          </tbody>
        </table>
      </form>
    </div>
  </div>
</div>"
`;

exports[`Accruals getAccrualsData should retrieve all data when viewing a date in the agreement range 1`] = `
"<div>
  <h1 id=\\"accruals-balance-title\\" class=\\"govuk-caption-m\\">My accruals balance as of</h1>
  <h2 id=\\"accruals-date\\" class=\\"govuk-heading-m\\">1 April 2023</h2>
  <div class=\\"govuk-button-group button-group-row\\"><a class=\\"govuk-link govuk-link--no-visited-state\\" id=\\"navigation-previous-link\\" href=\\"/accruals/2023-03-31\\">Previous day</a><a class=\\"govuk-link govuk-link--no-visited-state\\" id=\\"navigation-next-link\\" href=\\"/accruals/2023-04-02\\">Next day</a></div>
  <div class=\\"accruals-data\\">
    <div class=\\"accruals-container\\">
      <form class=\\"grey-border\\">
        <h1 class=\\"govuk-heading-m newline\\"><span id=\\"annualTargetHours-title-span\\">Annual target hours
 <strong>2182</strong> remaining</span></h1>
        <table class=\\"govuk-table\\">
          <tbody class=\\"govuk-table__body\\">
            <tr class=\\"govuk-table__row\\">
              <th id=\\"annualTargetHours-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
              <td id=\\"annualTargetHours-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2192:00</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th id=\\"annualTargetHours-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
              <td id=\\"annualTargetHours-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">10:00</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th id=\\"annualTargetHours-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
              <td id=\\"annualTargetHours-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2182:00</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th id=\\"annualTargetHours-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
              <td id=\\"annualTargetHours-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">2186:00</td>
            </tr>
          </tbody>
        </table>
      </form>
    </div>
  </div>
</div>"
`;

exports[`Accruals getAccrualsData should retrieve no data when viewing a date outside the agreement range 1`] = `
"<div>
  <h1 id=\\"accruals-balance-title\\" class=\\"govuk-caption-m\\">My accruals balance as of</h1>
  <h2 id=\\"accruals-date\\" class=\\"govuk-heading-m\\">8 April 2023</h2>
  <div class=\\"govuk-button-group button-group-row\\"><a class=\\"govuk-link govuk-link--no-visited-state\\" id=\\"navigation-previous-link\\" href=\\"/accruals/2023-04-07\\">Previous day</a><a class=\\"govuk-link govuk-link--no-visited-state\\" id=\\"navigation-next-link\\" href=\\"/accruals/2023-04-09\\">Next day</a></div>
  <div class=\\"accruals-container\\">
    <form class=\\"grey-border\\">
      <h1 class=\\"govuk-heading-m newline\\">No agreement has been found</h1>
      <table class=\\"govuk-table\\">
        <tbody class=\\"govuk-table__body\\">
          <tr class=\\"govuk-table__row\\">
            <th id=\\"annualTargetHours-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
            <td id=\\"annualTargetHours-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"annualTargetHours-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
            <td id=\\"annualTargetHours-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"annualTargetHours-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
            <td id=\\"annualTargetHours-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
          <tr class=\\"govuk-table__row\\">
            <th id=\\"annualTargetHours-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
            <td id=\\"annualTargetHours-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</div>"
`;

exports[`Accruals getAccrualsData should show no data found when there is no agreement data 1`] = `
"<div>
  <h1 id=\\"accruals-balance-title\\" class=\\"govuk-caption-m\\">My accruals balance as of</h1>
  <h2 id=\\"accruals-date\\" class=\\"govuk-heading-m\\">7 April 2023</h2>
  <div class=\\"govuk-button-group button-group-row\\"><a class=\\"govuk-link govuk-link--no-visited-state\\" id=\\"navigation-previous-link\\" href=\\"/accruals/2023-04-06\\">Previous day</a><a class=\\"govuk-link govuk-link--no-visited-state\\" id=\\"navigation-next-link\\" href=\\"/accruals/2023-04-08\\">Next day</a></div>
  <div class=\\"accruals-data\\">
    <div class=\\"accruals-container\\">
      <form class=\\"grey-border\\">
        <h1 class=\\"govuk-heading-m newline\\">No agreement has been found</h1>
        <table class=\\"govuk-table\\">
          <tbody class=\\"govuk-table__body\\">
            <tr class=\\"govuk-table__row\\">
              <th id=\\"annualTargetHours-total-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Total</th>
              <td id=\\"annualTargetHours-total-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th id=\\"annualTargetHours-worked-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Worked</th>
              <td id=\\"annualTargetHours-worked-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th id=\\"annualTargetHours-remaining-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Remaining</th>
              <td id=\\"annualTargetHours-remaining-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
            <tr class=\\"govuk-table__row\\">
              <th id=\\"annualTargetHours-target-lbl\\" scope=\\"row\\" class=\\"govuk-table__header\\">Target</th>
              <td id=\\"annualTargetHours-target-value\\" class=\\"govuk-table__cell govuk-table__cell--numeric\\">-</td>
            </tr>
          </tbody>
        </table>
      </form>
    </div>
  </div>
</div>"
`;
